# lenticular-image-tool

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/image/: mod.rs  resize.rs
crates/core/src/lenticular/: mod.rs  tiff.rs
src/: main.rs
