[workspace]
resolver = "2"
members = ["bin/cli", "bin/testing", "crates/core"]

    [workspace.dependencies]
    # error handling
    anyhow = "1.0"
    thiserror = "1.0"
    # logging
    log = { version = "0.4" }
    env_logger = "0.11"
    # image
    image = "0.25"
    tiff = "0.9"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.tiff]
opt-level = 3

[profile.dev.package.fast_image_resize]
opt-level = 3

[profile.dev.package.ndarray]
opt-level = 3
